--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ python:
   - "3.6"
   - "3.6-dev"
   - "3.7-dev"
+  - "3.8-dev"
 install:
   - pip install -r requirements.txt
 script:
   - pytest
+after_success:
+  - bash < (curl -s https://codecov.io/bash)
