--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 script:
   - pytest
 after_success:
-  - bash < (curl -s https://codecov.io/bash)
+  - bash < (curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
