--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  -  py.test --cov=test_junkie tests/
 after_success:
   - bash < (curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
