--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ install:
   - pip install -r requirements.txt
 script:
   - if [[ $TRAVIS_PYTHON_VERSION != 2.7 ]]; then (py.test --cov=test_junkie tests/); fi
-  # deadlocks observed on python 2 + PyTest; runs fine outside of PyTest on python 2
+  # Abnormal issues when using pytest on python 2, such as deadlocks and threads not starting.
+  # Works perfectly fine outside of pytest on python 2. Also works fine with/without pytest on python 3.
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (python tests/test_advanced_features.py); fi
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (python tests/on_class/test_cancel.py); fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (py.test --cov=test_junkie tests/ --ignore=tests/test_advanced_features.py --ignore=tests/on_class/test_cancel.py); fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (python tests/metrics/test_reporting.py); fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (py.test --cov=test_junkie tests/
+                                                  --ignore=tests/test_advanced_features.py
+                                                  --ignore=tests/metrics/test_reporting.py
+                                                  --ignore=tests/on_class/test_cancel.py); fi
 after_success:
   - codecov -t $CODECOV_TOKEN
