Many bug fixes & improvements
- Meta.update() now requires object of the suite (aka self) to be passed
in as a mandatory argument
- Now able to use Meta.update() from within a use case without initially
defining it in the test decorator
- Added new function Meta.get_meta() in order to get meta data from
within a test case
- Improved handling of bad parameters, tests/suite affected by bad
parameters will now be ignored
- Fixed live thread count monitoring during parllellized parameters mode
- Improved visibility of labels and ticks in HTML report
- Fixes #3: Correct passing rate should now be displayed in HTML reports
- Fixed bug when HTML report creation failed when number of passed tests
was 0
- Added new event: on_class_ignore, see documentation for details
- Increased test coverage
- Updated bug report template
- Docs updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (py.test --cov=test_junkie tests/
                                                   --ignore=tests/test_advanced_features.py
                                                   --ignore=tests/reporting/test_reporting.py
-                                                  --ignore=tests/on_class/test_cancel.py); fi
+                                                  --ignore=tests/on_class/test_cancel.py
+                                                  --ignore=tests/threading); fi
 after_success:
   - codecov -t $CODECOV_TOKEN
