--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
   - "3.7-dev"
 install:
   - pip install -r requirements.txt
+  - python setup.py install
 before_script:
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 script:
