--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
   - "3.6"
   - "3.6-dev"
   - "3.7-dev"
+before_install:
+  - if [[ $TRAVIS_PYTHON_VERSION != 2.7 ]]; then (sudo apt-get install -y python3-dev gcc); fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (sudo apt-get install -y python-dev gcc); fi
 install:
   - pip install -r requirements.txt
   - python setup.py install
