--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - "3.6"
   - "3.6-dev"
   - "3.7-dev"
+  - "3.8-dev"
 before_install:
   - if [[ $TRAVIS_PYTHON_VERSION != 2.7 ]]; then (sudo apt-get install -y python3-dev gcc); fi
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (sudo apt-get install -y python-dev gcc); fi
