--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,19 @@
 language: python
 
 python:
-  - "2.7"
   - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
 
 before_install:
-  - if [[ $TRAVIS_PYTHON_VERSION != 2.7 ]]; then (sudo apt-get install -y python3-dev gcc); fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (sudo apt-get install -y python-dev gcc); fi
+  - sudo apt-get install -y python3-dev gcc
 install:
   - pip install -r requirements.txt
   - python setup.py install
 before_script:
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
 script:
-  - if [[ $TRAVIS_PYTHON_VERSION != 2.7 ]]; then (py.test --cov=test_junkie tests/); fi
-  # Abnormal issues when using pytest on python 2, such as deadlocks and threads not starting.
-  # Works perfectly fine outside of pytest on python 2. Also works fine with/without pytest on python 3.
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (python tests/test_advanced_features.py); fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (python tests/on_class/test_cancel.py); fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (python tests/reporting/test_reporting.py); fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then (py.test --cov=test_junkie tests/
-                                                  --ignore=tests/test_advanced_features.py
-                                                  --ignore=tests/reporting/test_reporting.py
-                                                  --ignore=tests/on_class/test_cancel.py
-                                                  --ignore=tests/test_threading.py); fi
+  - py.test --cov=test_junkie tests/
 after_success:
   - codecov -t $CODECOV_TOKEN
